--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
-<button routerLink="/tableau">Tableau</button>
+<button [routerLink]="['/tableau', fakeId]">Tableau</button>
 <router-outlet></router-outlet>
